fix align widgets

--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -5,7 +5,7 @@
   overflow: auto;
 }
 .content {
-  height: fit-content;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
